More work on registration, email, user confirmation by email

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -100,6 +100,7 @@ it:
       email_header: Intestazione messaggio
       email_footer: Firma messaggio
     membership_emails:
+      member_activated: Iscrizione attivata
       member_accepted: Iscrizione accettata
       member_created: Nuova iscrizione
       member_deleted: Iscrizione cancellata
