--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,7 +39,7 @@ en:
         no_roles_yet: No roles created yet
         edit: Edit group
         new_role: New group
-        roles_administration: Administer groups
+        roles_administration: Group administration
       members:
         accept: "Accept user registration"
         reject: "Reject user registration"
@@ -109,27 +109,31 @@ en:
     memberships:
       show:
         other: Other Memberships
-    members:
-      shared:
-        account: Account
-        profile: Profile
-        organization: Organization
-      error_messages:
-        problems_in_following_fields: There were problems with the following fields
-      form_actions:
-        save: Save
-        cancel: Cancel
-      form:
-        blank_password_keeps_current: Leaving password blank keeps the current password
-      new:
-        title: Membership Application Form
-        instructions: Please complete information. You will be notified
-          of your acceptance upon approval.
-        submit_application: Submit Application
-      shared:
-        account: Account
-        profile: Profile
-        organization: Organization
+      members:
+        login_form:
+          username: Username
+          password: Password
+          login: Login
+        shared:
+          account: Account
+          profile: Profile
+          organization: Organization
+        error_messages:
+          problems_in_following_fields: There were problems with the following fields
+        form_actions:
+          save: Save
+          cancel: Cancel
+        form:
+          blank_password_keeps_current: Leaving password blank keeps the current password
+        new:
+          title: Membership Application Form
+          instructions: Please complete information. You will be notified
+            of your acceptance upon approval.
+          submit_application: Submit Application
+        shared:
+          account: Account
+          profile: Profile
+          organization: Organization
     activerecord:
       attributes:
        user:
