remove Provinces constant allowing users a free-form input
be kind to our Kiwi and Ozzie and non-US/CAN friends :)
* 99% of the time people put the abbreviation when the field is short

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,6 +127,8 @@ en:
           cancel: Cancel
         form:
           blank_password_keeps_current: Leaving password blank keeps the current password
+          state_province: "Province/State"
+          postal_code: "Postal Code/ZIP"
         new:
           title: Membership Application Form
           instructions: Please complete information. You will be notified
